# cpp-locate-data-example

./: .clang-tidy  BUILDING.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  HACKING.md  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: docs.cmake  install-config.cmake  install-config.cmake.in  install-rules.cmake  set-multiconfig-target-properties.cmake  variables.cmake  windows-get-path.cmake
docs/: Doxyfile.in
example/: CMakeLists.txt  CMakePresets.json  empty_example.cpp  vcpkg.json
generate/data/: dynamic.txt.in
generate/include/locate-example/: defaultPaths.hpp.in
include/locate-example/: locate-example.hpp
ports/cpplocate/: fix-install-paths.patch  portfile.cmake  remove-global-install.patch  vcpkg.json
source/: locate-example.cpp
test/: CMakeLists.txt
test/data/: dynamic.txt
test/source/: locate-example_test.cpp
